fix spacing on mobile

--- a/src/Assets/scss/default.scss
+++ b/src/Assets/scss/default.scss
@@ -163,6 +163,9 @@ html {
         font-size: 32px;
         line-height: 40px;
     }
+    @media(max-width: 590px) {
+        font-size: 28px;
+    }
 
     i {
         padding: 5px;
@@ -395,9 +398,10 @@ html {
 .contact-body {
     position: relative;
     text-align: center;
-    padding-top: 2%;
+    padding-top: 20px;
     font-family: "Lato", sans-serif;
     font-weight: 300;
+    padding-bottom: 50px;
 
     .github-button {
         margin: 10px auto 50px;
